blog-app/infra/k8s/client-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client #manage all pods with a label app: client
  template:
    metadata:
      labels:
        app: client #add the label app:posts to all pods this dpl creates
    spec:
      containers:
        - name: client
          image: 510033969879.dkr.ecr.us-east-2.amazonaws.com/tech/architecture/blog-app/client
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client # This service will expose all pods with a label of app: client
  ports:
    - name: client # just for logging purposes, no need to match the pod or service name
      protocol: TCP
      port: 3000
      targetPort: 3000 # port where the pod is listening for traffic
